<resources>
    <string name="app_name">Dorstip-App</string>
    <string name="splash_title">Dorstip</string>
    <string name="splash_subtitle">Bier</string>
    <string name="splash_dot">•</string>
    <string name="get_started">Get Started</string>
    <string name="deliver_to">Deliver to</string>
    <string name="search_for_drink">🔍 Search for drink</string>
    <string name="recommendation">Recommendation</string>
    <string name="show_all_drinks">Show All Drinks</string>
    <string name="welcome_back">Welcome back</string>
    <string name="title">title</string>
    <string name="price">price</string>
    <string name="alcohol">alcohol</string>
    <string name="type">type</string>
    <string name="tasting_note">Tasting Note</string>
    <string name="description">Description</string>
    <string name="rating">rating</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="no_account_register_here">No account? Register here</string>
    <string name="skip">Skip</string>
    <string name="registration" />
    <string name="welcome" />
</resources>