<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/background">

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="36sp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:layout_marginVertical="10dp"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/login"
        android:textColor="@color/secondary"/>

    <TextView
        android:layout_marginVertical="10dp"
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_register_here"
        android:textColor="@color/accent"/>

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/primary"
        android:insetLeft="8dp"
        android:insetRight="8dp"
        android:text="@string/skip"
        android:visibility="gone" />
</LinearLayout>
