<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen.SplashScreenActivity"
    android:background="@color/primary">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tvSplashScreenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ebgaramond_bold"
            android:text="@string/splash_title"
            android:textColor="@color/background"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSplashScreenDot"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:fontFamily="@font/ebgaramond_bold"
            android:text="@string/splash_dot"
            android:textColor="@color/accent"
            android:textSize="70sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvSplashScreenSubtitle" />

        <TextView
            android:id="@+id/tvSplashScreenSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ebgaramond_bold"
            android:text="@string/splash_subtitle"
            android:textColor="@color/background"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSplashScreenTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>

